Fix BukkitUtility collection coloring